--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -4,6 +4,7 @@ dynamic = ["version"]
 requires-python = ">=3.11,<3.13"
 
 dependencies = [
+    "arize-phoenix-otel~=0.9.2",
     "authlib==1.3.1",
     "azure-identity==1.16.1",
     "beautifulsoup4==4.12.2",
